--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             <a class="nav-link" href="https://www.argentina.gob.ar/salud/alimentacion-saludable/recetas">Recetas</a>
-            <a class="nav-link" href="./integradorjs.html">Comprar tickets</a>
+            <a class="nav-link" href="./ticket-purchase.html">Comprar tickets</a>
             <a class="nav-link" href="https://www.netmd.org/nutricion-todos-los-articulos">Articulos</a>
             <a class="nav-link" href="#form" tabindex="-1" aria-disabled="true">Planes</a>
           </div>
@@ -40,16 +40,18 @@
   <main>
     <div class="overflow-hidden position-relative banner">
       <img src="https://cdn.pixabay.com/photo/2017/06/06/22/46/mediterranean-cuisine-2378758_960_720.jpg" alt="banner"
-        class="h-100 w-100">
-      <div class="h3 text-dark position-absolute bottom-50 start-50">Programando Nutrición</div>
+        style="height: 1000px;">
+      <div class="bg-danger">
+        <div class="h3 text-light position-absolute bottom-50 start-50">Programando Nutrición</div>
       <div class="h6 position-absolute text-light top-50 start-50">Esta compuesto por un grupo de nutricionistas con el
         objetivo de mejorar la alimentacion y hábitos de la poblacion.
         Una alimentación sana hace que nuestro organismo funcione de la mejor forma posible. Esta cubre nuestras
         necesidades fisiológicas básicas y reduce el riesgo de padecer enfermedades.
         <br>
-        <button class="bg-transparent my-1 mx-2 p-1 border-light">+ Info</button>
-        <button class="bg-danger text-light my-1 p-1 border-danger">Conocenos</button>
+        <button class="bg-transparent gap-1 border-light">+ Info</button>
+        <button class="bg-danger text-light gap-1 border-danger">Conocenos</button>
       </div>
+    </div>
     </div>
     <section class="Lideres">
       <div class="d-flex flex-column align-items-center my-4">
@@ -65,8 +67,8 @@
         <img src="https://cdn.pixabay.com/photo/2015/11/23/09/17/hummus-1057997__340.jpg"
           class="card-img-top h-70 w-80 object-cover" alt="card-img-top">
         <div class="card-body">
-          <div class="btn btn-primary mb-2 py-0 px-2">Nuevo</div>
-          <div class="btn btn-warning mb-2 py-0 px-2">Vegano</div>
+          <div class="btn btn-primary">Nuevo</div>
+          <div class="btn btn-warning">Vegano</div>
           <h5 class="card-title">Hummus de garbanzos</h5>
           <p class="card-text">Pasta de garbanzos deliciosa que se condimenta de diferentes maneras, muy tradicional en
             la cultura árabe, para untar en pancito, grisines o sola!</p>
@@ -76,8 +78,8 @@
         <img src="https://cdn.pixabay.com/photo/2020/09/25/13/49/cookies-5601436__340.jpg"
           class="card-img-top h-70 w-80 object-cover" alt="card-img-top">
         <div class="card-body">
-          <div class="btn btn-primary mb-2 py-0 px-2">Nuevo</div>
-          <div class="btn btn-danger mb-2 py-0 px-2">Dulce</div>
+          <div class="btn btn-primary">Nuevo</div>
+          <div class="btn btn-danger">Dulce</div>
           <h5 class="card-title">Galletas de chips</h5>
           <p class="card-text">Si eres una persona de esas que les encantan las galletas, pero les da pereza
             realizarlas; ¡prueba esta nueva receta de galletas con chispas de chocolate en un sólo paso!</p>
@@ -87,8 +89,8 @@
         <img src="https://cdn.pixabay.com/photo/2016/06/08/00/03/pizza-1442945_960_720.jpg"
           class="card-img-top h-70 w-80 object-cover" alt="card-img-top">
         <div class="card-body">
-          <div class="btn btn-primary mb-2 py-0 px-2">Nuevo</div>
-          <div class="btn btn-secondary mb-2 py-0 px-2">Vegetariana</div>
+          <div class="btn btn-primary">Nuevo</div>
+          <div class="btn btn-secondary">Vegetariana</div>
           <h5 class="card-title">Pizza vegetariana</h5>
           <p class="card-text">Esta pizza de verduras (pizza vegetariana) es facilísima de preparar y puedes usar las
             verduras que más te gusten. Solo tienes que seguir estos consejos, y a disfrutar</p>
@@ -98,15 +100,15 @@
     <aside>
       <div class="d-flex bg-danger">
         <img src="https://cdn.pixabay.com/photo/2016/03/27/23/00/weight-lifting-1284616__340.jpg"
-          class="img-fluid  h-60 w-50" alt="img-fluid">
-        <div class="d-flex flex-column align-items-left p-3">
-          <div class=" text-light">
+          class="img-fluid"  alt="img-fluid" style="height:30%;">
+        <div class="d-flex flex-column align-items-center p-3">
+          <div class=" text-light" style="height: 50%;">
             <h1 class="display-6"></h1>
-            <p class="h3">Gimnasio: Smart fit</p>
-            <p class="h6">La actividad física regular y adecuada, incluido cualquier movimiento corporal que requiera
+            <p class="h3"  >Gimnasio: Smart fit</p>
+           <!--<p class="h6">La actividad física regular y adecuada, incluido cualquier movimiento corporal que requiera
               energía, puede reducir el riesgo de muchas enfermedades y trastornos no transmisibles, como la
               hipertensión, la enfermedad coronaria, los accidentes cerebrovasculares, la diabetes, el cáncer de mama y
-              colon y la depresión</p>
+              colon y la depresión</p> -->
             <p class="h6">Deja las excusas y realiza ejercicio, el momento es AHORA!</p>
             <div class="btn btn-danger border-light mb-2 py-0 px-2">+ Info</div>
           </div>
@@ -123,7 +125,7 @@
     </section>
     <form>
       <div class="d-flex flex-column align-items-center my-4">Contactanos y cambia tus habitos para siempre</div>
-      <div class="d-flex mb-2 px-3">
+      <div class="d-flex mb-2 px-3 gap-2">
         <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
         <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
       </div>
